--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,11 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Live Stream Upload to Firebase</title>
+    <style>
+        html,body{
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+            width: 100vw;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    </style>
 </head>
 <body>
-    <video id="cameraStream" width="640" height="480" autoplay></video>
-    <button id="uploadButton">Upload Frame</button>
+    <video id="cameraStream" width="1920" height="1080" autoplay></video>
 
     <!-- Use version 8 of Firebase scripts -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
@@ -44,7 +54,6 @@
             })
             .catch((error) => console.error("Error accessing camera:", error));
 
-        document.getElementById("uploadButton").addEventListener("click", uploadFrame);
 
             socket.on("capture" ,() =>{
                 uploadFrame()
