--- a/views/registartion.ejs
+++ b/views/registartion.ejs
@@ -22,9 +22,9 @@
         width:  100vw;
         height:  100vh;
         position: relative;
-        
+ 
       }
-      
+ 
       #bg {
         position: absolute;
         top: 0;
@@ -57,11 +57,11 @@
         bottom: 10%;
         cursor: pointer;
       }
-
+ 
       #userForm{
         margin-bottom: 30px;
       }
-      
+ 
       input {
         width: 70%;
         padding: 16px;
@@ -72,12 +72,12 @@
         text-transform: uppercase;
         font-weight: bolder;
       }
-
+ 
       input::placeholder {
         font-weight: bolder;
         font-size: larger;
       }
-
+ 
       button {
         width: 30%;
         top: 30%;
@@ -94,19 +94,19 @@
       input:focus {
         outline: none;
       }
-
+ 
       #registration {
         width: 350px;
         margin-bottom: 10px;
       }
-
+ 
       #code{
         position: absolute;
         bottom: 23%;
         left: 40%;
         font-size: 50px;
         font-weight: bolder;
-        
+ 
       }
       .code-input-container {
         background-size: contain; /* Adjust as necessary */
@@ -127,10 +127,10 @@
       }
       #qrCode{
         position: absolute;
-        right:  19%;
-        bottom:  16%;
+        right:  5%;
+        bottom:  9%;
       }
-
+ 
       #showQr{
         top: 0;
         left: 0;
@@ -156,9 +156,9 @@
         position: absolute;
         display: none;
       }
-
-
-
+ 
+ 
+ 
       @keyframes spin {
         0% {
           transform: rotate(0deg);
@@ -171,7 +171,7 @@
   </head>
   <body>
     <div class="spinner"></div>
-    
+ 
       <div id="main">
         <img
         id="first"
@@ -179,14 +179,14 @@
         alt=""
       />
        <div id="new" type="button" onclick="goToForm()">
-
+ 
        </div>
        <div id="old" type="button" onclick="goToCode()">
-
+ 
        </div>
-
+ 
       </div>
-     
+ 
       <div id="userForm"style="display: none;" >
         <img id="bg" src="../assets/registration.png" alt="" />
         <img
@@ -219,7 +219,7 @@
           />
         </form>
       </div>
-
+ 
       <div id="tq" style="display: none;">
         <img
             src="../assets/registration.png"
@@ -227,7 +227,7 @@
           />
           <h1 id="code">8888</h1>
       </div>
-
+ 
       <div class="code-input-container" id="container" style="display: none;">
         <img id="bg" src="../assets/registration.png" alt="" />
         <input type="text" class="code-input" id="codeInput1" maxlength="1" />
@@ -235,7 +235,7 @@
         <input type="text" class="code-input" id="codeInput3" maxlength="1" />
         <input type="text" class="code-input" id="codeInput4" maxlength="1" />
       </div>
-  
+ 
       <div id="showQr"  style="display: none;">
         <img id="qrBg" src="../assets/qrbg.png" alt="" />
         <button id="startButton"  onclick="stratCapture()">START CAPTURE</button>
@@ -243,27 +243,27 @@
       </div>
     </div>
     <script src="/socket.io/socket.io.js"></script>
-    
+ 
     <script>
       const socket = io();
       const intervalTime = 8000;
       const form = document.querySelector("form");
       const spinner = document.querySelector(".spinner");
-
+ 
       function goToCode() {
         document.getElementById("main").style.display = 'none'
         document.getElementById("container").style.display = 'block'
         // alert('emit for photo')
         // socket.emit('startCapture')
       }
-
-     
-
+ 
+ 
+ 
       function goToForm() {
         document.getElementById("main").style.display = 'none'
         document.getElementById("userForm").style.display = 'block'
       }
-
+ 
       const sendData = () => {
         document.getElementById("userForm").style.display = "none"; // Show the spinner
         const name = document.getElementById("name").value;
@@ -271,7 +271,7 @@
         const email = document.getElementById("email").value;
         socket.emit("saveUser", { name, contact, email });
       };
-
+ 
       socket.on("userSaved", (e) => {
         document.getElementById("tq").style.display = "block";
         document.getElementById("code").innerText = e;
@@ -280,7 +280,7 @@
           location.reload();
         }, intervalTime);
       });
-
+ 
       function moveToNextInput(e) {
         let target = e.srcElement || e.target;
         let maxLength = parseInt(target.attributes["maxlength"].value, 10);
@@ -300,7 +300,7 @@
           submitCode();
         }
       }
-
+ 
       function submitCode() {
         let code = "";
         for (let i = 1; i <= 4; i++) {
@@ -309,32 +309,33 @@
         // alert(`Code entered: ${code}`);
         socket.emit("getCode", { code });
       }
-      
+ 
        // Add event listeners to the code input fields
        document.querySelectorAll('.code-input').forEach(input => {
         input.addEventListener('input', moveToNextInput);
       });
-
+ 
       socket.on("userFound",  () => {
         document.getElementById("container").style.display = 'none'
         document.getElementById("startButton").style.display = 'block'
         document.getElementById("showQr").style.display = 'block'
       })
-
+ 
       socket.on("userNotFound", () => {
         alert("Please register.")
         location.reload()
       })
-
+ 
       function generateQRCode(value) {
         const qrcode = new QRCode(document.getElementById("qrCode"), {
           text: value,
-          width: 170,
-          height: 170,
+          width: 400,
+          height: 400,
         });
       }
-
+ 
       function stratCapture() {
+        document.getElementById("startButton").style.display = 'none'
         socket.emit('startCapture')
       }
       socket.on("getUlr", (e) => {
